src/docs/MA_dot2/GSG_02_PhysicalSetupAndLayout/en/1.1/index.md
---
originalUrl: 'https://help2.malighting.com/Page/MA_dot2/GSG_02_PhysicalSetupAndLayout/en/1.1'
---

<div class="topic-navigation">

<div class="pull-right">
	<span class="pull-left">


<div class="pull-left">
<form action="/Topic/SetCurrentVersionNumber" class="form-inline" id="frmTagSelector" method="post">	<span class="form-mini">
		<div class="input-prepend"><span class="add-on">Select different version</span><select autocomplete="off" id="versionNumberId" name="versionNumberId" onchange="$(this).closest('#frmTagSelector').submit();" style="width: 120px;"><option value="">- latest -</option>
<option selected="selected" value="3">1.1</option>
<option value="7">1.2</option>
<option value="12">1.3</option>
<option value="16">1.5</option>
<option value="29">1.9</option>
</select></div>
		<input data-val="true" data-val-number="The field Int32 must be a number." data-val-required="The Int32 field is required." id="ProductId" name="ProductId" type="hidden" value="7">
		<input id="CurrentGuid" name="CurrentGuid" type="hidden" value="f05738f2-0e05-46c2-8a20-88c0852321e8">
	</span>
</form></div>&nbsp;	</span>
	<span class="pull-right" style="white-space: nowrap;">
			<button class="btn btn-mini" onclick="location.href='/Page/MA_dot2/GSG_01_Introduction/en/1.1'; " title="Go to previous page '1 - Introduction'">
				<i class="icon-arrow-left"></i> previous
			</button>

			<button class="btn btn-mini" onclick="location.href='/Page/MA_dot2/GSG_03_CreateNewShow/en/1.1';" title="Go to next page '3 - Create a new empty show'">
				next <i class="icon-arrow-right"></i> 
			</button>
	</span>
</div>
<div class="clear-fix" style="margin-bottom: 10px"></div>
</div>

					<div class="infobox"><b>Hint:</b><br><b>New help version</b><br>The help version you selected belongs to an older software version. <a href="/Topic/SetCurrentVersionNumber/29/f05738f2-0e05-46c2-8a20-88c0852321e8">You may want to view the latest help version.</a></div>

			<div class="pull-right">
					<button class="btn btn-mini" style="margin-right: 10px; height: 30px;" onclick="location.href = '/Media/TopicPdf/7909/3'; " title="Open/Save this topic as PDF document for viewing or printing">
						<img src="/Content/images/icons/filetype_pdf.png" style="height: 24px;"> Open topic as PDF
					</button>
				<span class="badge badge-info">Version 1.1</span>
			</div>
		<h1>Getting Started Guide - Physical setup and layout - how to connect stuff and what's what</h1>

			<div class="topic-table-of-contents">
				<h2>Table of contents of this topic</h2>
				<div class="topic-toc-toggler topic-toc-toggler-hide"><a href="#" onclick="$('.topic-toc-ul').toggle(); $('.topic-toc-toggler-hide').hide(); $('.topic-toc-toggler-show').show(); return false;">hide</a></div>
				<div class="topic-toc-toggler topic-toc-toggler-show" style="display: none;"><a href="#" onclick="$('.topic-toc-ul').toggle(); $('.topic-toc-toggler-hide').show(); $('.topic-toc-toggler-show').hide(); return false;">show</a></div>
				<ul class="topic-toc-ul">
						<li>
							<a href="#toc_header_anchor_1">The back</a>
						</li>
						<li>
							<a href="#toc_header_anchor_2">The front</a>
						</li>
				</ul>
			</div>

		<p>You should always place your console on a flat and stable surface. It's also a good idea to avoid a&nbsp;dirty and dusty environment - yeah I know, not often a possibility, but it's recommended&nbsp;anyway&nbsp;.</p>

<a name="toc_header_anchor_1" id="toc_header_anchor_1" class="topic-toc-item"></a><h2>The back</h2>

<p>The back panel looks like this (on a dot2 core):</p>

<p><img alt="" src="/Media/Image/Dot2_GettingStarted_PhysicalSetupAndLayout_01_1-1.png"></p>

<p>There's a lot of different connectors on the back of the console. For this tour we'll need to connect power (the connector at number one) and I would suggest that you connect a USB keyboard to one of the USB connectors at number three. You should also connect an external screen (connector number four). The best is a screen with touch function. If you don't have a touch screen, then you should connect a mouse. Both are connected to the USB connectors at number three. That's the devices we need for the beginning of this guide. Later we'll look at connecting the console to a network (using the&nbsp;Ethernet connector at number two). &nbsp;</p>

<p>When you have connected the needed devices, then you can press the power button (at number one) to turn on the console - remember to connect it to a suitable power source.</p>

<p>The following is a short description of all the connectors on the back:</p>

<ol>
	<li><strong>Power switch and connector</strong> - Here you can connect the power cord and turn on or off the console.</li>
	<li><strong>Ethernet connector</strong> - This is for connecting to a network.</li>
	<li><strong>3 x USB connectors</strong> - for USB memory sticks, touch screen, Keyboard &amp; Mouse, etc.</li>
	<li><strong>DVI-D connector</strong> - for an external digital screen. You can't use a DVI to VGA adaptor. It's for digital screens only.</li>
	<li><strong>Balanced Audio in</strong> - this is a balanced mono audio input for sound trigger functionality.</li>
	<li><strong>DMX input</strong> - this DMX input is currently only used for DMX remote control.</li>
	<li><strong>MIDI in and out</strong> - the MIDI can be used also as a remote control and for MIDI Time Code.</li>
	<li><strong>DC Remote Control</strong> - this is for contact closure remote control.</li>
	<li><strong>Lamp connector</strong> - this if for the console goose neck lamp. Please only use original&nbsp;dot2 lamps.</li>
	<li><strong>LTC&nbsp;connector</strong> - this is used for SMPTE&nbsp;Time Code.</li>
	<li><strong>4 x DMX out</strong> - here you can get universe 1 to 4 out of the console.</li>
</ol>

<a name="toc_header_anchor_2" id="toc_header_anchor_2" class="topic-toc-item"></a><h2>The front</h2>

<p>The front of a dot2 core looks like this:</p>

<p><img alt="" src="/Media/Image/Dot2_GettingStarted_PhysicalSetupAndLayout_TheFront.png"></p>

<p>Throughout this guide I'll mention different areas of the console.&nbsp;</p>

<p>This is a short walk-through of the different ares:</p>

<ol>
	<li><strong>Command section</strong> - This is where you have access to most of the functions on the console using keys.</li>
	<li><strong>Encoders</strong> - The encoders are used to select and change values and options. You can press an encoder to confirm your current choice and sometimes open other windows. The functions of the encoders changes throughout the different sections of the console. The current function and values can be viewed on the screen above them (indicated with number 10 - Screen 1).</li>
	<li><strong>Main Executor</strong> - This is the main executor section. Here you'll most likely put your primary cue list.</li>
	<li><strong>Executors with faders</strong> - These executors can also have cue lists, but they could also have chasers, group masters and other functions. There's one key under the fader with this symbol <span class="hardkey"><img alt="go" src="/Media/Mlg/go_1.png"></span> . This is the executor GO key. The one below this have this symbol <span class="hardkey"><img alt="flash" src="/Media/Mlg/flash_1.png"></span>, this is the executor Flash&nbsp;key. The executors are numbered from the Main executor (number three) to the left. So the one closest to the Main executor is executor number 1.</li>
	<li><strong>Executors without faders</strong> - There are two rows of extra executors above the ones with faders. They are independent&nbsp;of each other. They are only executor GO keys - <span class="hardkey"><img alt="go" src="/Media/Mlg/go_1.png"></span>. The functionality&nbsp;don't have to be Go. They are also numbered from the Main executor and to the left. The top row begins with number 101 and the next row begin with 201. If you press and hold the <span class="hardkey"><img alt="ma" src="/Media/Mlg/ma.png"></span> key then you can see the numbers at the bottom of the screen above them (number 11 - Screen 2). Moving forward I'll just use the executor numbers.&nbsp;</li>
	<li><strong>Page keys</strong> - Pressing these keys you can change the page numbers for your executors. This allows you to organize your show onto different pages. Active executors are always visible and will stay "on top" when you change page. We'll have a look at this later. You can't change the page for the Main executor.</li>
	<li><strong>Grand Master</strong> - The grand master fader allows you to pull down the intensity of your output. The <span class="hardkey">B.O.</span> key will take the output to zero as long as it's pressed. If it flashes then, your grand Master fader isn't at 100%.</li>
	<li><strong>Level wheel</strong> - You can change the intensity of your selected fixtures using this level wheel.</li>
	<li><strong>Menu keys </strong>- These three keys gives you access to the three main menu sections of the console. A lot more about this in the next chapters.</li>
	<li><strong>Screen 1</strong> - This screen changes content dynamically with your work. At the bottom of the screen you can always see the function and values of the encoders below. There will also be a command line input. On the right side of the screen you'll be able to select different functions for the fixtures (when we add some).</li>
	<li><strong>Screen 2</strong> - This screen allows you to view and select different things and functions. We'll talk a lot more about this one.</li>
</ol>

<p>If you have a dot2 XL-F or dot2 XL-B, you have some more executors and you have another screen (screen 3) on the left side. Please press the&nbsp;<span class="hardkey"><img alt="ma" src="/Media/Mlg/ma.png"></span>&nbsp;key to see the executors numbers.</p>

<p>&nbsp;</p>

<p>Ok that's what it looks like. Let's start doing something - Next chapter please.&nbsp;</p>

<p>&nbsp;</p>


				<br>
<div class="topic-navigation">

<div class="pull-right">
	<span class="pull-left">


<div class="pull-left">
<form action="/Topic/SetCurrentVersionNumber" class="form-inline" id="frmTagSelector" method="post">	<span class="form-mini">
		<div class="input-prepend"><span class="add-on">Select different version</span><select autocomplete="off" id="versionNumberId" name="versionNumberId" onchange="$(this).closest('#frmTagSelector').submit();" style="width: 120px;"><option value="">- latest -</option>
<option selected="selected" value="3">1.1</option>
<option value="7">1.2</option>
<option value="12">1.3</option>
<option value="16">1.5</option>
<option value="29">1.9</option>
</select></div>
		<input data-val="true" data-val-number="The field Int32 must be a number." data-val-required="The Int32 field is required." id="ProductId" name="ProductId" type="hidden" value="7">
		<input id="CurrentGuid" name="CurrentGuid" type="hidden" value="f05738f2-0e05-46c2-8a20-88c0852321e8">
	</span>
</form></div>&nbsp;	</span>
	<span class="pull-right" style="white-space: nowrap;">
			<button class="btn btn-mini" onclick="location.href='/Page/MA_dot2/GSG_01_Introduction/en/1.1'; " title="Go to previous page '1 - Introduction'">
				<i class="icon-arrow-left"></i> previous
			</button>

			<button class="btn btn-mini" onclick="location.href='/Page/MA_dot2/GSG_03_CreateNewShow/en/1.1';" title="Go to next page '3 - Create a new empty show'">
				next <i class="icon-arrow-right"></i> 
			</button>
	</span>
</div>
	<div class="clear-fix"></div>
	<div class="pull-right">
	
			<button class="btn btn-mini" onclick="location.href='/Media/TopicPdf/7909/3';" title="Open/Save this topic as PDF document for viewing or printing">
				<img src="/Content/images/icons/filetype_pdf.png"> Open topic as PDF
			</button>
	</div>
<div class="clear-fix" style="margin-bottom: 10px"></div>
</div>

	
